--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -2,28 +2,22 @@
 
 @media screen and (min-width:360px) {
     #container-general__Home-P4 {
-        /*  border: 2px solid green; */
-        height: 100vh;
-        background-color:  #e5e7eb;
+        /*  border: 2px solid blue; */
+        background-color: #f1f1f1;
         margin-top: 2.6rem;
         display: flex;
         flex-direction: column;
-    }
-
-    @keyframes textColor {
-        50% {
-            color: #5b21b6;
-        }
+        height: 53vh;
+        justify-content: center;
     }
 
     #titulo-contacto__Home-P4 {
-        color: #6b7280;
-        font-size: 3.5rem;
+        color: #334155;
+        font-size: 3.2rem;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: 200;
         animation: textColor 8s infinite;
-        text-align: center;
-        margin-top: 1rem;
+        margin: .8rem;
     }
 
     .contenedor-grid-socialMedia__Home-P4 {
@@ -32,11 +26,10 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
         gap: 10px;
-        margin-top: 1rem;
     }
 
     .item-grid-socialMedia__Home-P4 {
-        background-color: #f4f4f5;
+        background-color: #d4d4d4;
         padding: 20px;
         display: flex;
         gap: .2rem;
@@ -58,7 +51,7 @@
         height: 1.8rem;
     }
 
-    .item-grid-socialMedia__Home-P4 h3{
+    .item-grid-socialMedia__Home-P4 h3 {
         font-weight: 600;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
@@ -78,6 +71,26 @@
 
     .item-grid-socialMedia__Home-P4:nth-child(4) {
         color: #64C351;
+    }
+
+    #container-titleAndLogo__Home-P4 {
+        display: flex;
+        align-items: center;
+    }
+
+    #logo-contacto__Home-P4 {
+        width: 1.6rem;
+        height: 1.8rem;
+        margin-top: .7rem;
+        color: #06b6d4;
+    }
+
+    #texto-contacto__Home-P4 {
+        font-size: 18px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin: 1rem;
+        text-align: center;
+        color: #262626;
     }
 }
 
