--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -762,9 +762,8 @@
 
 @media screen and (min-width: 360px) {
   #container-general__Home-P4 {
-    /*  border: 2px solid green; */
-    height: 100vh;
-    background-color: #e5e7eb;
+    /*  border: 2px solid blue; */
+    background-color: #f1f1f1;
     margin-top: 2.6rem;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -773,26 +772,19 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-  }
-  @-webkit-keyframes textColor {
-    50% {
-      color: #5b21b6;
-    }
-  }
-  @keyframes textColor {
-    50% {
-      color: #5b21b6;
-    }
+    height: 53vh;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   #titulo-contacto__Home-P4 {
-    color: #6b7280;
-    font-size: 3.5rem;
+    color: #334155;
+    font-size: 3.2rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     -webkit-animation: textColor 8s infinite;
             animation: textColor 8s infinite;
-    text-align: center;
-    margin-top: 1rem;
+    margin: .8rem;
   }
   .contenedor-grid-socialMedia__Home-P4 {
     display: -ms-grid;
@@ -803,10 +795,9 @@
     -ms-grid-rows: (1fr)[2];
         grid-template-rows: repeat(2, 1fr);
     gap: 10px;
-    margin-top: 1rem;
   }
   .item-grid-socialMedia__Home-P4 {
-    background-color: #f4f4f5;
+    background-color: #d4d4d4;
     padding: 20px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -851,6 +842,27 @@
   }
   .item-grid-socialMedia__Home-P4:nth-child(4) {
     color: #64C351;
+  }
+  #container-titleAndLogo__Home-P4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #logo-contacto__Home-P4 {
+    width: 1.6rem;
+    height: 1.8rem;
+    margin-top: .7rem;
+    color: #06b6d4;
+  }
+  #texto-contacto__Home-P4 {
+    font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 1rem;
+    text-align: center;
+    color: #262626;
   }
 }
 
