--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -7,8 +7,7 @@
         margin-top: 2.6rem;
         display: flex;
         flex-direction: column;
-        height: 53vh;
-        justify-content: center;
+        height: 60vh;
     }
 
     #titulo-contacto__Home-P4 {
@@ -17,7 +16,7 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: 200;
         animation: textColor 8s infinite;
-        margin: .8rem;
+        margin: 1.5rem .5rem 1rem 1rem;
     }
 
     .contenedor-grid-socialMedia__Home-P4 {
@@ -26,6 +25,7 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
         gap: 10px;
+        margin-top: 2rem;
     }
 
     .item-grid-socialMedia__Home-P4 {
@@ -81,14 +81,14 @@
     #logo-contacto__Home-P4 {
         width: 1.6rem;
         height: 1.8rem;
-        margin-top: .7rem;
+        margin-top: .9rem;
         color: #06b6d4;
     }
 
     #texto-contacto__Home-P4 {
         font-size: 18px;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        margin: 1rem;
+        margin: 0 1rem;
         text-align: center;
         color: #262626;
     }
