--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -772,10 +772,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    height: 53vh;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    height: 60vh;
   }
   #titulo-contacto__Home-P4 {
     color: #334155;
@@ -784,7 +781,7 @@
     font-weight: 200;
     -webkit-animation: textColor 8s infinite;
             animation: textColor 8s infinite;
-    margin: .8rem;
+    margin: 1.5rem .5rem 1rem 1rem;
   }
   .contenedor-grid-socialMedia__Home-P4 {
     display: -ms-grid;
@@ -795,6 +792,7 @@
     -ms-grid-rows: (1fr)[2];
         grid-template-rows: repeat(2, 1fr);
     gap: 10px;
+    margin-top: 2rem;
   }
   .item-grid-socialMedia__Home-P4 {
     background-color: #d4d4d4;
@@ -854,13 +852,13 @@
   #logo-contacto__Home-P4 {
     width: 1.6rem;
     height: 1.8rem;
-    margin-top: .7rem;
+    margin-top: .9rem;
     color: #06b6d4;
   }
   #texto-contacto__Home-P4 {
     font-size: 18px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 1rem;
+    margin: 0 1rem;
     text-align: center;
     color: #262626;
   }
