--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -7,16 +7,19 @@
         margin-top: 2.6rem;
         display: flex;
         flex-direction: column;
+        align-items: center;
         height: 60vh;
+        z-index: 2;
     }
 
     #titulo-contacto__Home-P4 {
+        /* border: 2px solid red; */
         color: #334155;
         font-size: 3.2rem;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: 200;
         animation: textColor 8s infinite;
-        margin: 1.5rem .5rem 1rem 1rem;
+        margin: 1.7rem .4rem 1rem 1rem;
     }
 
     .contenedor-grid-socialMedia__Home-P4 {
