--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -773,16 +773,21 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 60vh;
+    z-index: 2;
   }
   #titulo-contacto__Home-P4 {
+    /* border: 2px solid red; */
     color: #334155;
     font-size: 3.2rem;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     -webkit-animation: textColor 8s infinite;
             animation: textColor 8s infinite;
-    margin: 1.5rem .5rem 1rem 1rem;
+    margin: 1.7rem .4rem 1rem 1rem;
   }
   .contenedor-grid-socialMedia__Home-P4 {
     display: -ms-grid;
