--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -4,11 +4,11 @@
     #container-general__Home-P4 {
         /*  border: 2px solid blue; */
         background-color: #f1f1f1;
-        margin-top: 2.6rem;
+        margin-top: 1.9rem;
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 60vh;
+        min-height: 60vh;
         z-index: 2;
     }
 
@@ -99,7 +99,7 @@
 
 @media screen and (min-width:414px) {
     #container-general__Home-P4 {
-        /*  border: 2px solid green; */
-        margin-top: 0rem;
+         /* border: 2px solid green; */
+        margin-top: 4rem;
     }
 }
