--- a/app/styles/partials/_navbar_desktop.scss
+++ b/app/styles/partials/_navbar_desktop.scss
@@ -14,6 +14,9 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
+        z-index: 10;
+        position: sticky;
+        top: 0;
     }
 
     .containers-navbar-desktop {
