--- a/app/styles/partials/_navbar_mobile.scss
+++ b/app/styles/partials/_navbar_mobile.scss
@@ -7,6 +7,7 @@
         background-color: #141414;
         padding: .5rem;
         width: 100%;
+        z-index: 1;
     }
 
     .containers-navbar {
