--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -25,6 +25,7 @@
     background-color: #141414;
     padding: .5rem;
     width: 100%;
+    z-index: 1;
   }
   .containers-navbar {
     height: 9vh;
@@ -207,6 +208,10 @@
         -ms-flex-pack: justify;
             justify-content: space-between;
     width: 100%;
+    z-index: 10;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
   }
   .containers-navbar-desktop {
     /* border: 2px solid green; */
@@ -770,7 +775,7 @@
   #container-general__Home-P4 {
     /*  border: 2px solid blue; */
     background-color: #f1f1f1;
-    margin-top: 2.6rem;
+    margin-top: 1.9rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -781,7 +786,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 60vh;
+    min-height: 60vh;
     z-index: 2;
   }
   #titulo-contacto__Home-P4 {
@@ -877,8 +882,66 @@
 
 @media screen and (min-width: 414px) {
   #container-general__Home-P4 {
-    /*  border: 2px solid green; */
-    margin-top: 0rem;
+    /* border: 2px solid green; */
+    margin-top: 4rem;
+  }
+}
+
+@media screen and (min-width: 360px) {
+  #form-contact__Home-P4 {
+    /* border: 2px solid red; */
+    margin: 1rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    gap: 1.5rem;
+    padding: 1rem;
+  }
+  #form-contact__Home-P4 input,
+  textarea {
+    padding: 8px;
+    background-color: #0c0c0cd2;
+    width: 85%;
+    border-radius: 15px;
+    color: white;
+  }
+  #form-contact__Home-P4 input::-webkit-input-placeholder,
+  textarea::-webkit-input-placeholder {
+    color: #d1d5db;
+    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  #form-contact__Home-P4 input:-ms-input-placeholder,
+  textarea:-ms-input-placeholder {
+    color: #d1d5db;
+    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  #form-contact__Home-P4 input::-ms-input-placeholder,
+  textarea::-ms-input-placeholder {
+    color: #d1d5db;
+    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  #form-contact__Home-P4 input::placeholder,
+  textarea::placeholder {
+    color: #d1d5db;
+    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  #form-contact__Home-P4 textarea {
+    height: 12rem;
+  }
+  .input-contact-form {
+    border: 2px solid red;
   }
 }
 /*# sourceMappingURL=styles.css.map */
