--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1427,7 +1427,7 @@
 
 @media screen and (min-width: 1280px) {
   #container-general__HomeP1-DESKTOP {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     height: 90vh;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1437,25 +1437,89 @@
     width: 50%;
   }
   .contenedor-interior__HomeP1-DESKTOP:nth-of-type(1) {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   #container-image-HomeP1-DESKTOP {
-    height: 100%;
-    width: 100%;
-    background-color: black;
+    height: 80%;
+    width: 60%;
+    backdrop-filter: blur(0px) saturate(199%);
+    -webkit-backdrop-filter: blur(0px) saturate(199%);
+    background-color: rgba(0, 0, 0, 0.918);
+    margin: 2rem;
+    z-index: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #Image-Main__HomeP1-DESKTOP {
-    border: 2px solid maroon;
+    /* border: 2px solid maroon; */
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+    -webkit-transition: .6s ease;
+    transition: .6s ease;
+    pointer-events: none;
+    z-index: 2;
+  }
+  .TranslateElement {
+    -webkit-transition: .5s ease;
+    transition: .5s ease;
+    -webkit-transform: translate(450px, 0px);
+            transform: translate(450px, 0px);
+    width: 32% !important;
+    -o-object-position: -99px;
+       object-position: -99px;
+  }
+  #text-main__HomeP1-DESKTOP {
+    position: absolute;
+  }
+  #lista__HomeP1-DESKTOP {
+    /* border: 2px solid blue; */
+    position: absolute;
+    height: 30rem;
+    min-width: 14rem;
+    color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    padding: 1rem;
+    margin-left: 1rem;
+    z-index: 1;
+  }
+  .item-li__HomeP1-DESKTOP {
+    list-style: inside;
+    z-index: 1;
+    padding: .8rem;
+    border-radius: 60px;
+    background: #525151;
+    -webkit-box-shadow: inset 6px 6px 11px #474646, inset -6px -6px 11px #5d5c5c;
+            box-shadow: inset 6px 6px 11px #474646, inset -6px -6px 11px #5d5c5c;
+    border-radius: 20px;
+    font-family: 13px;
+    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   .contenedor-interior__HomeP1-DESKTOP:nth-of-type(2) {
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
