--- a/app/styles/partials/_home_p1_desktop.scss
+++ b/app/styles/partials/_home_p1_desktop.scss
@@ -16,30 +16,24 @@
         display: flex;
     }
 
-    .contenedor-interior__HomeP1-DESKTOP {
-        width: 50%;
-    }
-
-
     //? Clases Contenedor 1
     .contenedor-interior__HomeP1-DESKTOP:nth-of-type(1) {
         /* border: 2px solid red; */
         display: flex;
-        justify-content: center;
+        width: 60%;
     }
 
     #container-image-HomeP1-DESKTOP {
         /* border: 2px solid gray; */
-        height: 80%;
-        width: 60%;
+        height: 90%;
+        width: 50%;
         margin: 2rem;
         z-index: 1;
         display: flex;
         justify-content: center;
         align-items: center;
         cursor: pointer;
-        margin-left: 10rem;
-        margin-top: 4.5rem;
+        margin-left: 6rem;
     }
 
     #Image-Main__HomeP1-DESKTOP {
@@ -52,12 +46,31 @@
         z-index: 2;
     }
 
+    #Image-Main-Second__HomeP1-DESKTOP {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        pointer-events: none;
+        z-index: 2;
+        display: none;
+    }
+
+    /* (Animacion de la primer imagen) */
     .TranslateElement {
-        transition: 1s ease;
-        transform: translate(300px, 0px);
-        width: 32% !important;
-        object-position: -99px;
-        filter: grayscale(20%);
+        transition: 2s ease;
+        transform: translate(350px, 0px);
+        width: 35% !important;
+        object-position: -105px;
+    }
+
+    /* (Animacion de la segunda imagen) */
+    .TranslateAndShowElement-2 {
+        transition: 2s ease;
+        display: block !important;
+        transform: translate(370px, 0px);
+        width: 35% !important;
+        object-position: -194px;
+        object-fit: cover;
     }
 
     //? Clases Contenedor 2
@@ -67,6 +80,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        width: 40%;
     }
 
     #title-IgnacioARG__HomeP1-DESKTOP {
