--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1434,22 +1434,17 @@
     display: -ms-flexbox;
     display: flex;
   }
-  .contenedor-interior__HomeP1-DESKTOP {
-    width: 50%;
-  }
   .contenedor-interior__HomeP1-DESKTOP:nth-of-type(1) {
     /* border: 2px solid red; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    width: 60%;
   }
   #container-image-HomeP1-DESKTOP {
     /* border: 2px solid gray; */
-    height: 80%;
-    width: 60%;
+    height: 90%;
+    width: 50%;
     margin: 2rem;
     z-index: 1;
     display: -webkit-box;
@@ -1462,8 +1457,7 @@
         -ms-flex-align: center;
             align-items: center;
     cursor: pointer;
-    margin-left: 10rem;
-    margin-top: 4.5rem;
+    margin-left: 6rem;
   }
   #Image-Main__HomeP1-DESKTOP {
     /* border: 2px solid maroon; */
@@ -1476,16 +1470,37 @@
     pointer-events: none;
     z-index: 2;
   }
+  #Image-Main-Second__HomeP1-DESKTOP {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    pointer-events: none;
+    z-index: 2;
+    display: none;
+  }
+  /* (Animacion de la primer imagen) */
   .TranslateElement {
-    -webkit-transition: 1s ease;
-    transition: 1s ease;
-    -webkit-transform: translate(300px, 0px);
-            transform: translate(300px, 0px);
-    width: 32% !important;
-    -o-object-position: -99px;
-       object-position: -99px;
-    -webkit-filter: grayscale(20%);
-            filter: grayscale(20%);
+    -webkit-transition: 2s ease;
+    transition: 2s ease;
+    -webkit-transform: translate(350px, 0px);
+            transform: translate(350px, 0px);
+    width: 35% !important;
+    -o-object-position: -105px;
+       object-position: -105px;
+  }
+  /* (Animacion de la segunda imagen) */
+  .TranslateAndShowElement-2 {
+    -webkit-transition: 2s ease;
+    transition: 2s ease;
+    display: block !important;
+    -webkit-transform: translate(370px, 0px);
+            transform: translate(370px, 0px);
+    width: 35% !important;
+    -o-object-position: -194px;
+       object-position: -194px;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .contenedor-interior__HomeP1-DESKTOP:nth-of-type(2) {
     /* border: 2px solid blue; */
@@ -1502,6 +1517,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    width: 40%;
   }
   #title-IgnacioARG__HomeP1-DESKTOP {
     font-size: 3.5rem;
