--- a/app/styles/partials/_home_p1_mobile.scss
+++ b/app/styles/partials/_home_p1_mobile.scss
@@ -15,6 +15,7 @@
         }
     }
 
+    /* Contenedor general de HomeP1 - (Mobile) */
     #container-general__Home_P1 {
         /* border: 2px solid red; */
         display: flex;
@@ -31,6 +32,7 @@
         min-height: 98vh;
     }
 
+    /* Imagen central */
     #image-home_P1 {
         /* border: 2px solid green; */
         width: 7rem;
@@ -39,9 +41,9 @@
         border-radius: 50%;
         margin: 1rem 0 0 1rem;
         z-index: 10;
-        border: 1px solid rgb(156, 40, 156);
     }
 
+    /* Contenedor de texto de informacion */
     #container-info__Home-P1 {
         /* border: 2px solid green; */
         width: 100%;
@@ -67,18 +69,6 @@
         font-size: 14px;
         color: #737373;
         margin-top: 5px;
-    }
-
-    #button-descargarCV__Home__P1 {
-        margin-top: .2rem;
-        background-color: #047857;
-        color: white;
-        padding: .5rem;
-        border: none;
-        cursor: pointer;
-        border-radius: 20px;
-        width: 85%;
-        text-align: center;
     }
 
     @keyframes border-animation {
