--- a/app/styles/partials/_home_p4.scss
+++ b/app/styles/partials/_home_p4.scss
@@ -1,5 +1,6 @@
 //? Estilos Home_P4
 
+/* 360px - Android */
 @media screen and (min-width: 360px) {
 
     //* Contenedor General
@@ -16,53 +17,40 @@
     //* Seccion 1 y 2
     #seccion-1__HomeP4,
     #seccion-2__HomeP4 {
-        /*  border: 2px solid green; */
+        /* border: 2px solid green; */
         width: 100%;
     }
 
     //* Contenedor del Titulo Cabecera
     #container-titleAndLogo__Home-P4 {
-        /*  border: 2px solid red; */
+        /* border: 2px solid red; */
         display: flex;
         align-items: center;
         justify-content: center;
         /* Alineacion Horizontal  */
         margin-top: 2rem;
         margin-bottom: 1rem;
+        display: none;
     }
 
-    //* Propiedades del Titulo
-    #titulo-contacto__Home-P4 {
-        /* border: 2px solid red; */
-        color: #334155;
-        font-size: 3.2rem;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-            Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-        font-weight: 200;
-        animation: textColor 8s infinite;
-        margin: 1.7rem 0.4rem 1rem 1rem;
-    }
-
-    //* Logo Check Celeste
-    #logo-contacto__Home-P4 {
-        width: 1.6rem;
-        height: 1.8rem;
-        margin-top: 0.9rem;
-        color: #06b6d4;
-    }
-
-    //* Texto 'Te invito a contactarme'
-    #texto-contacto__Home-P4 {
-        font-size: 18px;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-            Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-        margin: 0 1rem;
+    //* Propieades del Titulo Panes Redes Sociales
+    #TituloPanelRedesSociales__HomeP4{
+        width: 100%;
         text-align: center;
-        color: #262626;
-        font-weight: 700;
+        font-size: 1.2rem;
+        margin-top: 1rem;
+        font-weight: bold;
     }
 }
 
+@media screen and (min-width:360px) and (max-width:1440px) {
+    #IndexSection {
+        display: none;
+        visibility: hidden;
+    }
+}
+
+/* 414px - IPhone 11 */
 @media screen and (min-width: 414px) {
 
     //* Contenedor General
@@ -119,7 +107,7 @@
 
     /* 2 */
     #seccion-2__HomeP4 {
-      /*   border: 2px solid seagreen; */
+        /*   border: 2px solid seagreen; */
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -142,7 +130,7 @@
     }
 
     //* Titulo de 'Api' de Formspree
-    #titulo-Formspree_HomeP4{
+    #titulo-Formspree_HomeP4 {
         /* border: 2px solid slateblue; */
         font-size: 1.8rem;
         color: white;
@@ -152,7 +140,7 @@
     }
 
     //* Clase NEGRITA
-    .B-Negrita{
+    .B-Negrita {
         color: var(--color--principal);
         font-weight: bold;
     }
