--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -369,6 +369,7 @@
       background-position: 100% 50%;
     }
   }
+  /* Contenedor general de HomeP1 - (Mobile) */
   #container-general__Home_P1 {
     /* border: 2px solid red; */
     display: -webkit-box;
@@ -393,6 +394,7 @@
             align-items: center;
     min-height: 98vh;
   }
+  /* Imagen central */
   #image-home_P1 {
     /* border: 2px solid green; */
     width: 7rem;
@@ -402,8 +404,8 @@
     border-radius: 50%;
     margin: 1rem 0 0 1rem;
     z-index: 10;
-    border: 1px solid #9c289c;
   }
+  /* Contenedor de texto de informacion */
   #container-info__Home-P1 {
     /* border: 2px solid green; */
     width: 100%;
@@ -433,17 +435,6 @@
     font-size: 14px;
     color: #737373;
     margin-top: 5px;
-  }
-  #button-descargarCV__Home__P1 {
-    margin-top: .2rem;
-    background-color: #047857;
-    color: white;
-    padding: .5rem;
-    border: none;
-    cursor: pointer;
-    border-radius: 20px;
-    width: 85%;
-    text-align: center;
   }
   @-webkit-keyframes border-animation {
     0% {
@@ -1355,6 +1346,7 @@
   }
 }
 
+/* 360px - Android */
 @media screen and (min-width: 360px) {
   #container-general__Home-P4 {
     /* border: 2px solid blue; */
@@ -1374,11 +1366,11 @@
   }
   #seccion-1__HomeP4,
   #seccion-2__HomeP4 {
-    /*  border: 2px solid green; */
+    /* border: 2px solid green; */
     width: 100%;
   }
   #container-titleAndLogo__Home-P4 {
-    /*  border: 2px solid red; */
+    /* border: 2px solid red; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1391,33 +1383,25 @@
     /* Alineacion Horizontal  */
     margin-top: 2rem;
     margin-bottom: 1rem;
+    display: none;
   }
-  #titulo-contacto__Home-P4 {
-    /* border: 2px solid red; */
-    color: #334155;
-    font-size: 3.2rem;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-weight: 200;
-    -webkit-animation: textColor 8s infinite;
-            animation: textColor 8s infinite;
-    margin: 1.7rem 0.4rem 1rem 1rem;
-  }
-  #logo-contacto__Home-P4 {
-    width: 1.6rem;
-    height: 1.8rem;
-    margin-top: 0.9rem;
-    color: #06b6d4;
-  }
-  #texto-contacto__Home-P4 {
-    font-size: 18px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    margin: 0 1rem;
+  #TituloPanelRedesSociales__HomeP4 {
+    width: 100%;
     text-align: center;
-    color: #262626;
-    font-weight: 700;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    font-weight: bold;
   }
 }
 
+@media screen and (min-width: 360px) and (max-width: 1440px) {
+  #IndexSection {
+    display: none;
+    visibility: hidden;
+  }
+}
+
+/* 414px - IPhone 11 */
 @media screen and (min-width: 414px) {
   #container-general__Home-P4 {
     min-height: 10vh;
